# ESP32-Plant-Monitor

./: .clang-format  .gitignore  CMakeLists.txt  sdkconfig.old
PCB_Shield_Design/: SCH_ESP32-Simplified_2024-08-01.json
main/: AHT20.c  AHT20.h  CMakeLists.txt  app_nvs.c  app_nvs.h  aws_iot.c  aws_iot.h  http_server.c  http_server.h  main.c  moisture_sensor.c  moisture_sensor.h  rgb_led.c  rgb_led.h  sntp_time_sync.c  sntp_time_sync.h  tasks_common.h  toggle_sleep_button.c  toggle_sleep_button.h  wifi_app.c  wifi_app.h
main/webpage/: app.css  app.js  index.html
